--- a/index.html
+++ b/index.html
@@ -333,7 +333,11 @@
           <img src="images/portfolio/portfolio-1.png" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>Design and Simulation of a Dataflow Arithmetic Logic Unit  Control Using FSM in VHDL</h4>
+              <h4>
+            <a href="https://github.com/Ronhobs/Design-and-Simulation-of-Data-Flow-and-Arithmetic-Logic-Control-Unit-using-FSM-Finite-State-Machine-" target="_blank" title="View project details">
+              Design and Simulation of a Dataflow Arithmetic Logic Unit Control Using FSM in VHDL
+            </a>
+          </h4>
               <p>EMBEDDED SYSTEMS</p>
             </div>
           </div>
