--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <div class="portfolio-info">
             <div class="caption">
               <h4>
-            <a href="https://github.com/Ronhobs/Design-and-Simulation-of-Data-Flow-and-Arithmetic-Logic-Control-Unit-using-FSM-Finite-State-Machine-" target="_blank" title="View project details">
+            <a href=https://github.com/Ronhobs/Design-and-Simulation-of-Data-Flow-and-Arithmetic-Logic-Control-Unit-using-FSM-Finite-State-Machine- target="_blank" rel="noopener noreferrer">
               Design and Simulation of a Dataflow Arithmetic Logic Unit Control Using FSM in VHDL
             </a>
           </h4>
