--- a/index.html
+++ b/index.html
@@ -349,9 +349,10 @@
           <div class="portfolio-info">
             <div class="caption">
               <h4>
-                  <a href="https://github.com/Ronhobs/DEVELOPMENT-OF-A-LAYERED-QUEUING-NETWORK-FOR-A-WEB-SERVER-SYSTEM" target="_blank" rel="noopener noreferrer">
-              
-            </a>Development of a Layered Queuing Network Model for Web Server System</h4>
+            <a href="https://github.com/Ronhobs/DEVELOPMENT-OF-A-LAYERED-QUEUING-NETWORK-FOR-A-WEB-SERVER-SYSTEM" target="_blank" rel="noopener noreferrer">
+              Development of a Layered Queuing Network Model for Web Server System
+            </a> 
+              </h4>
               <p>SOFTWARE DEVELOPMENT</p>
             </div>
           </div>
@@ -362,9 +363,11 @@
           <img src="images/portfolio/portfolio-3.png" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4> <a href="https://github.com/Ronhobs/FINAL-YEAR-PROJECT-APP-FOR-DETECTING-MAIZE-LEAF-DISEASE-USING-CNN-" target="_blank" rel="noopener noreferrer">
+              <h4> 
+            <a href="https://github.com/Ronhobs/FINAL-YEAR-PROJECT-APP-FOR-DETECTING-MAIZE-LEAF-DISEASE-USING-CNN-" target="_blank" rel="noopener noreferrer">
+              Development of a Web Application for Maize Leaf Disease Classification using CNN 
             </a>
-     Development of a Web Application for Maize Leaf Disease Classification using CNN</h4>
+             </h4>
               <p>ARTIFICIAL INTELLIGENCE</p>
             </div>
           </div>
@@ -376,8 +379,10 @@
           <div class="portfolio-info">
             <div class="caption">
               <h4>
-                   <a href="https://github.com/Ronhobs/DISCRETE-EVENT-SIMULATION-PROJECT" target="_blank" rel="noopener noreferrer">
-            </a>Design and Simulation  of a check-in process at Smiths Falls Airport</h4>
+             <a href="https://github.com/Ronhobs/DISCRETE-EVENT-SIMULATION-PROJECT" target="_blank" rel="noopener noreferrer">
+              Design and Simulation  of a check-in process at Smiths Falls Airport 
+             </a>
+              </h4>
               <p>SIMULATION AND MODELLING</p>
             </div>
           </div>
@@ -389,8 +394,10 @@
           <div class="portfolio-info">
             <div class="caption">
               <h4>
-                       <a href="https://github.com/Ronhobs/VHDL-APPLICATION-SERVER-MOTOR" target="_blank" rel="noopener noreferrer">
-                       </a VHDL Application: Server Motor</h4>
+             <a href="https://github.com/Ronhobs/VHDL-APPLICATION-SERVER-MOTOR" target="_blank" rel="noopener noreferrer">
+                 VHDL Application: Server Motor   
+             </a>
+              </h4>
               <p>ELECTRONICS</p>
             </div>
           </div>
@@ -401,8 +408,11 @@
           <img src="images/portfolio/portfolio-6.png" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4> <a href="https://github.com/Ronhobs/GENERIC-ALGORITHM-FOR-AI" target="_blank" rel="noopener noreferrer">
-              </a C++ Generic Algorithm</h4>
+              <h4>
+            <a href="https://github.com/Ronhobs/GENERIC-ALGORITHM-FOR-AI" target="_blank" rel="noopener noreferrer">
+           C++ Generic Algorithm  
+            </a>
+              </h4>
               <p>OPTIMIZATION PROBLEMS</p>
             </div>
           </div>
@@ -413,8 +423,11 @@
           <img src="images/portfolio/portfolio-7.png" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>  <a href="https://github.com/Ronhobs/RFID-Radio-Frequency-Identification-Access-Control-System" target="_blank" rel="noopener noreferrer">
-              </a Development of a RFID Tag Access Control System for Security</h4>
+              <h4>  
+            <a href="https://github.com/Ronhobs/RFID-Radio-Frequency-Identification-Access-Control-System" target="_blank" rel="noopener noreferrer">
+            Development of a RFID Tag Access Control System for Security  
+            </a>
+              </h4>
               <p>SOFTWARE DEVELOPMENT</p>
             </div>
           </div>
